# fadian-python

./: README.md  pyproject.toml
fadian/: __main__.py  constants.py  producer.py
fadian/producers/: fabing.py  fadian.py
templates/: fabing.yml  fadian.yml
